<resources>
    <string name="app_name">CamBook_App</string>
    <string name="log_in">LOG IN</string>
    <string name="create_new_account">CREATE AN ACCOUNT</string>
    <string name="book_now">Book Now!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="enter_the_name_you_use_in_real_life">Enter the name you use in real life.</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="next">Next</string>
    <string name="create_username">Create Username</string>
    <string name="enter_your_username">Enter your Username</string>
    <string name="user_name">Username</string>
    <string name="put_your_email_address">Put your Email address</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="email_address">Email address</string>
    <string name="put_your_permanent_address">Put your permanent address</string>
    <string name="use_your_permanent_address">Use your permanent Address</string>
    <string name="select_region">Select Region</string>
    <string name="what_s_your_date_of_birth">What\'s your Date of Birth?</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="pick_a_date">Pick a Date</string>
    <string name="what_s_your_gender">What\'s your Gender?</string>
    <string name="choose_your_date_of_birth">Choose your Date of Birth</string>
    <string name="choose_your_gender">Choose your Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="by_tapping_i_agree_you_agree_to_create_an_account_and_to_cambook_s_terms_and_privacy_policies">By tapping <b><u>I agree</u></b>, you agree to create an account and to Cambook’s terms and Privacy Policies.</string>
    <string name="the_privacy_policy_describes_the_ways_we_can_use_the_nformation_we_collect_when_you_create_an_account">The <b><u>Privacy Policy</u></b> describes the ways we can use the information we collect when you create an account.</string>
    <string name="taking_photographs_processing_images_and_ensuring_they_meet_the_desired_results">Taking photographs, processing images, and ensuring they meet the desired results.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="service">Service</string>
    <string name="reviews">Reviews</string>
    <string name="about">About</string>
    <string name="agree_to_cambook_s_terms_and_policies">Agree to Cambook’s terms and policies</string>
    <string name="people_who_use_our_service_may_have_uploaded_your_contact_information_to_cambook">People who use our service may have uploaded your contact information to Cambook.</string>
    <string name="i_agree">I Agree</string>
    <string name="i_agree_to_the_terms_and_policies">I agree to the terms and policies</string>
    <string name="full_name">FullName</string>
    <string name="brilliant_photos_keep_up_the_good_work">Brilliant photos! Keep up the good work!!</string>
    <string name="add_review">Add Review</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="user_profile">User Profile</string>
    <string name="pangasinan">Pangasinan</string>
    <string name="dash">-</string>
    <string name="Exclamation">!</string>
    <string name="firebase_url">https://cambook-c6ad5-default-rtdb.firebaseio.com/Bookings</string>
    <string name="Welcome">Welcome</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="Please_check_the_policy_agreement_checkbox_to_proceed.">Please check the policy agreement checkbox to proceed.</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_create_acc_as_admin">createAccAsAdmin</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>