<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_for_log"
    tools:context=".RegisterPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/arrow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/baseline_arrow_back_24" />

            <TextView
                android:id="@+id/t13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/oswaldsemibold"
                android:text="Create Account"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <ImageView
                android:id="@+id/logo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/arrow1"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:src="@drawable/logo1" />

            <TextView
                android:id="@+id/t14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/t13"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/intersemibold"
                android:gravity="center_horizontal"
                android:text="Create an account so you can book your reservations now!"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/t2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/t14"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/intersemibold"
                android:text="@string/enter_the_name_you_use_in_real_life"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fname_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/t2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:hint="@string/first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fname"
                    android:layout_width="323dp"
                    android:layout_height="65dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/txt_input_custom_outline"
                    android:fontFamily="@font/interregular"
                    android:paddingStart="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sname_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fname_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:hint="@string/surname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sname"
                    android:layout_width="323dp"
                    android:layout_height="65dp"
                    android:layout_below="@+id/fname_layout"
                    android:background="@drawable/txt_input_custom_outline"
                    android:fontFamily="@font/interregular"
                    android:paddingStart="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/t6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sname_layout"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/intersemibold"
                android:text="What should we call you?"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/t6"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:hint="Username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="323dp"
                    android:layout_height="65dp"
                    android:layout_below="@+id/t6"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/txt_input_custom_outline"
                    android:fontFamily="@font/interregular"
                    android:paddingStart="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/t9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username_layout"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/intersemibold"
                android:text="@string/use_your_permanent_address"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <fragment
                android:id="@+id/map_fragment"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/t9"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/t10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/map_fragment"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/intersemibold"
                android:text="@string/choose_your_date_of_birth"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/datepicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/t10"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/txt_input_custom_outline"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dobtxt"
                    android:layout_width="105dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/interregular"
                    android:gravity="left|center"
                    android:textColor="@color/black"
                    android:hint="@string/date_of_birth"
                    android:textColorHint="@color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/DoB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/curve2"
                    android:fontFamily="@font/intersemibold"
                    android:gravity="center"
                    android:text="@string/pick_a_date"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:clickable="true"
                    android:focusable="true"/>
            </LinearLayout>

            <TextView
                android:id="@+id/t4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/datepicker"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/intersemibold"
                android:text="@string/choose_your_gender"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/t4"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/txt_input_custom_outline"
                    android:padding="10dp"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/txt_input_custom_outline"
                    android:padding="10dp"
                    android:text="@string/female" />
            </RadioGroup>


            <TextView
                android:id="@+id/t7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gender"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/intersemibold"
                android:text="@string/enter_your_email_address"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/t7"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:hint="Email address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Email"
                    android:layout_width="323dp"
                    android:layout_height="65dp"
                    android:layout_below="@+id/book"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/txt_input_custom_outline"
                    android:fontFamily="@font/interregular"
                    android:paddingStart="10dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/t8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_layout"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/intersemibold"
                android:text="Create a password with at least 6 letters or numbers. It should be something that others can’t guess."
                android:textColor="@color/black"
                android:textSize="18sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/t8"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:hint="Password"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Password"
                    android:layout_width="323dp"
                    android:layout_height="65dp"
                    android:layout_below="@+id/t8"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/interregular"
                    android:background="@drawable/txt_input_custom_outline"
                    android:paddingStart="10dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Register"
                android:layout_centerHorizontal="true"
                android:visibility="gone" />

            <Button
                android:id="@+id/Register"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pass_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/curve2"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/intermedium"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="REGISTER"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

        </RelativeLayout>
    </LinearLayout>

</ScrollView>