<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".homeFragment"
    android:background="@drawable/gradient_background">

    <!--services layout-->
    <RelativeLayout
        android:id="@+id/services_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">

        <ImageView
            android:id="@+id/top_pic_service"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/cover_photo"
            android:scaleType="centerCrop"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/top_pic_service"
            android:layout_alignTop="@+id/top_pic_service"
            android:layout_marginStart="35dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/small_ep" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/top_pic_service"
            android:layout_alignTop="@+id/top_pic_service"
            android:layout_marginStart="130dp"
            android:layout_marginTop="105dp"
            android:fontFamily="@font/interbold"
            android:text="Eging Photography"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/service_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top_pic_service"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            app:tabRippleColor="@android:color/white"
            app:tabSelectedTextColor="@color/black"
            app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
            app:tabTextColor="@color/white">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/service_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/reviews_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/about_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/service_view_Pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/service_layout"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

</RelativeLayout>